      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)

  * Other Improvements:
    -------------------
    * Starter images can be in SVG (Scalable Vector Graphics) format.
      (Avoids loading PNG if SVG with the same name exists.)

    * Starter images can be in KPX (Kid Pix Template) format.
      (These appear to simply be JPEG with 60 byte's worth of Mac OS
      resource fork header at the beginning.)
      (Thanks to Sarah Curry for sharing some example templates to test.)

    * When a default size was not specified, SVG-based Stamps would default
      to the largest, which was canvas-sized.  Now defaulting to a more
      reasonable size.  (And users can click the maximum size choice to get
      the largest, canvas-sized rendition.)
      (SF.net bug #2836471)

    * Widened dialog windows, to help avoid word-wrap and overlap problems
      with some prompts, in some locales.
      (SF.net bug #2834461)

    * Shape Tool now locks rotation into 15 or 5 degree steps, when the
      radius of the shape is very small or small, respectively.
      (SF.net bug #2837177)

    * Shape Tool tries to avoid glitches where lines connect, when shape is
      rotated.  (Rotation of fixed-aspect shapes like Square and Octagon
      stays within the angle of the corners. i.e., rotating a square 140 deg.
      actually only rotates it 30 deg., since it looks identical,
      sans glitches.)
      (SF.net bug #2837177)

    * Created a BASH tab-completion file for Tux Paint, so that
      command-line options are easier to discover (without necessarily
      needing to consult the man page, 'Options' documentation, or --usage
      output).

 * New Starters:
   -------------
    * Elephant
    * Hat
    * Old Soviet Car
    * Skull 
    * Bald Eagle
    * Car 2
    * Desert Tortoise
    * Gecko
    * Manatee
    * Pansy